--- a/index.html
+++ b/index.html
@@ -7,11 +7,41 @@
         <body>
             <h1>World Editor</h1>
             <canvas id="myCanvas"></canvas>
+            <div id="controls">
+                <button onclick="addRandomPoint()">Add Point</button>
+                <button onclick="addRandomSegment()">Add Segment</button>
+            </div>
 
             <script src="js/math/graph.js"></script>
             <script src="js/primitives/point.js"></script>
             <script src="js/primitives/segment.js"></script>
             <script>
+                function addRandomSegment(){
+                    const index1 = Math.floor(Math.random() * graph.points.length);
+                    const index2 = Math.floor(Math.random() * graph.points.length);
+
+                    graph.addSegment(
+                        new Segment(graph.points[index1],graph.points[index2])
+                    );
+                    
+                    refreshCanvas();
+                }
+
+                function refreshCanvas(){
+                    ctx.clearRect(0,0, myCanvas.width,myCanvas.height);
+                    graph.draw(ctx);
+                }
+
+                function addRandomPoint(){
+                    const success = graph.tryAddPoint(
+                        new Point(
+                            Math.random() * myCanvas.width,
+                            Math.random() * myCanvas.height
+                        )
+                    );
+                    refreshCanvas();
+                    console.log(success);
+                }
                 myCanvas.width = 600;
                 myCanvas.height = 600;
 
@@ -28,7 +58,7 @@
                 const s4 = new Segment(p1,p3);
                 
                 const graph = new Graph([p1,p2,p3,p4],[s1,s2,s3,s4]);
-                graph.draw(ctx);
+                graph.draw(ctx); 
             </script>
         </body>
     </html>
