Added functions to check if segment already exists

--- a/index.html
+++ b/index.html
@@ -19,12 +19,16 @@
                 function addRandomSegment(){
                     const index1 = Math.floor(Math.random() * graph.points.length);
                     const index2 = Math.floor(Math.random() * graph.points.length);
-
-                    graph.addSegment(
+                    let success = false;
+                    if(index1 != index2){
+                        success = true;
+                        graph.addSegment(
                         new Segment(graph.points[index1],graph.points[index2])
-                    );
-                    
+                        );
+                                        
+                    }
                     refreshCanvas();
+                    console.log(success);
                 }
 
                 function refreshCanvas(){
