--- a/index.html
+++ b/index.html
@@ -19,14 +19,10 @@
                 function addRandomSegment(){
                     const index1 = Math.floor(Math.random() * graph.points.length);
                     const index2 = Math.floor(Math.random() * graph.points.length);
-                    let success = false;
-                    if(index1 != index2){
-                        success = true;
-                        graph.addSegment(
+                    const success = graph.tryAddSegment(
                         new Segment(graph.points[index1],graph.points[index2])
-                        );
-                                        
-                    }
+                    );
+                    
                     refreshCanvas();
                     console.log(success);
                 }
