--- a/index.html
+++ b/index.html
@@ -10,18 +10,38 @@
             <div id="controls">
                 <button onclick="addRandomPoint()">Add Point</button>
                 <button onclick="addRandomSegment()">Add Segment</button>
+                <button onclick="removeRandomSegment()">Remove Segment</button>
+                <button onclidk="removeRandomPoint()">Remove point</button>
             </div>
 
             <script src="js/math/graph.js"></script>
             <script src="js/primitives/point.js"></script>
             <script src="js/primitives/segment.js"></script>
             <script>
+                function removeRandomPoint(){
+                    if(graph.points.length == 0){
+                        console.log("No points");
+                        return;
+                    }
+                    const index = Math.floor(Math.random() * graph.points.length);
+                    graph.removePoint(graph.points[index]);
+                    refreshCanvas();
+                }
+                function removeRandomSegment(){
+                    if(graph.segments.length == 0){
+                        console.log("No segments");
+                        return;
+                    } 
+                    const index = Math.floor(Math.random() * graph.segments.length);
+                    graph.removeSegment(graph.segments[index]);
+                    refreshCanvas();
+                }    
                 function addRandomSegment(){
                     const index1 = Math.floor(Math.random() * graph.points.length);
                     const index2 = Math.floor(Math.random() * graph.points.length);
                     const success = graph.tryAddSegment(
                         new Segment(graph.points[index1],graph.points[index2])
-                    );
+                     );
                     
                     refreshCanvas();
                     console.log(success);
