Remove segments with point

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 <button onclick="addRandomPoint()">Add Point</button>
                 <button onclick="addRandomSegment()">Add Segment</button>
                 <button onclick="removeRandomSegment()">Remove Segment</button>
-                <button onclidk="removeRandomPoint()">Remove point</button>
+                <button onclick="removeRandomPoint()">Remove Point</button>
             </div>
 
             <script src="js/math/graph.js"></script>
